--- a/deel-1-flexbox-positioneren/styles/styles.css
+++ b/deel-1-flexbox-positioneren/styles/styles.css
@@ -1,1 +1,82 @@
-/*Schrijf hier jouw CSS*/
+
+/*  O P D R A C H T  1 */
+
+.opdracht-1 ul {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/*  O P D R A C H T  2 */
+
+.opdracht-2 ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.opdracht-2 li{
+    display: flex;
+    justify-content: center;
+    flex-basis: 0;
+    flex-grow: 1;
+}
+
+/*  O P D R A C H T  3 */
+
+.opdracht-3 ul{
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.topleft {
+    align-self: flex-start;
+}
+
+.centered {
+    align-self: center;
+}
+
+.bottom {
+    align-self: flex-end;
+}
+
+/*  O P D R A C H T  4 */
+
+.opdracht-4 ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+/*  O P D R A C H T  5 */
+
+.opdracht-5 div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%
+}
+
+.opdracht-5 div .column1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.opdracht-5 div .column2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.opdracht-5 div .column3 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+}
