--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -1,1 +1,93 @@
-/*Schrijf hier jouw css*/
+/* Body */
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-color: #F2F3D9;
+
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    background-color: #030027;
+    margin: 0;
+    padding: 40px;
+    color: white;
+}
+
+nav{
+    flex-grow: 1;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+    justify-content: flex-end;
+}
+
+.left {
+    list-style-type: none;
+    display: flex;
+    text-align: left;
+    justify-content: flex-start;
+    margin-right: auto;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+.right{
+    list-style-type: none;
+    display: flex;
+    text-align: right;
+    justify-content: flex-end;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    min-height: 100vh;
+    padding: 0 40px;
+}
+
+h1 {
+    flex-wrap: wrap;
+    padding-top: 40px;
+    padding-bottom: 5px;
+}
+
+h3 {
+    flex-wrap: wrap;
+    padding-bottom: 40px;
+}
+
+.titles {
+    flex-basis: auto;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.red-boxes {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.box-1, .box-2, .box-3 {
+    background-color: #C16E70;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: center;
+    border-radius: 4px;
+    max-width: 280px;
+    height: 350px;
+    padding: 15px;
+}
